cdk.out/CcCdkStack.template.json
{
 "Resources": {
  "cdktestInstanceSecurityGroup60A1B544": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "CcCdkStack/cdktest/InstanceSecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow HTTP traffic on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow SSH traffic on port 22",
      "FromPort": 22,
      "IpProtocol": "tcp",
      "ToPort": 22
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow HTTP traffic on port 8001",
      "FromPort": 8001,
      "IpProtocol": "tcp",
      "ToPort": 8001
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow HTTP traffic on port 8002",
      "FromPort": 8002,
      "IpProtocol": "tcp",
      "ToPort": 8002
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "CcCdkStack/cdktest"
     }
    ],
    "VpcId": "vpc-0ec2d6216e5a2d120"
   },
   "Metadata": {
    "aws:cdk:path": "CcCdkStack/cdktest/InstanceSecurityGroup/Resource"
   }
  },
  "cdktestInstanceProfile0598AA97": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     "LabRole"
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CcCdkStack/cdktest/InstanceProfile"
   }
  },
  "cdktest48E5DE28": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "IamInstanceProfile": {
     "Ref": "cdktestInstanceProfile0598AA97"
    },
    "ImageId": "ami-03a4942b8fcc1f29d",
    "InstanceType": "t2.micro",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "cdktestInstanceSecurityGroup60A1B544",
       "GroupId"
      ]
     }
    ],
    "SubnetId": "subnet-0c940465bf1809335",
    "Tags": [
     {
      "Key": "Name",
      "Value": "CcCdkStack/cdktest"
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash\nsudo apt-get update -y\nsudo apt-get install -y apache2 git\nsudo systemctl start apache2\nsudo systemctl enable apache2\nsudo echo 'Listen 8001' >> /etc/apache2/ports.conf\nsudo echo 'Listen 8002' >> /etc/apache2/ports.conf\nsudo git clone https://github.com/mateormz/websimple.git /var/www/websimple\nsudo git clone https://github.com/mateormz/webplantilla.git /var/www/webplantilla\necho '<VirtualHost *:8001>' | sudo tee /etc/apache2/sites-available/websimple.con [...]
    }
   },
   "Metadata": {
    "aws:cdk:path": "CcCdkStack/cdktest/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/2WNywrCMBAAv6X3zZoWRO8eRE/SfoCscQtr26TkYZGQfxeRguBpYBiYBuvtHnVFS1DmPqhRbpi7SGaAloNL3jDQEq6ZTYP5ZEMkaxg6NslLfB29SzMcevsn1rSA0IQ/4uJdLyOXT7QuCpzpSZt6hxprXT2CiPLJRpkY2y/fOdnyZakAAAA="
   },
   "Metadata": {
    "aws:cdk:path": "CcCdkStack/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
